<resources>
    <string name="app_name">BudgetBuddy</string>
    <string name="budget_buddy_1">Электронная почта</string>
    <string name="budget_buddy_2">Отправить код</string>
    <string name="budget_buddy_3">Полученный код</string>
    <string name="budget_buddy_4">Мы отправили проверочный код на %1$s. Письмо может попасть в папку Спам</string>
    <string name="budget_buddy_5">Для использования приложения авторизуйтесь</string>
    <string name="budget_buddy_6">Код не подходит</string>

    <string name="budget_buddy_7">Главная</string>
    <string name="budget_buddy_8">Статистика</string>
    <string name="budget_buddy_9">Настройки</string>

    <string name="budget_buddy_10">Добавить расходы</string>
    <string name="budget_buddy_11">Требуется настройка</string>
    <string name="budget_buddy_12">Укажите некоторые данные, требуемые для работы приложения</string>
    <string name="budget_buddy_13">Ваше имя</string>
    <string name="budget_buddy_14">Допустимые траты в месяц</string>
    <string name="budget_buddy_15">Подгружаем данные…</string>
    <string name="budget_buddy_16">Сумма трат</string>
    <string name="budget_buddy_17">Обязательное поле</string>
    <string name="budget_buddy_18">Статистика</string>
    <string name="budget_buddy_19">7 дней</string>
    <string name="budget_buddy_20">14 дней</string>
    <string name="budget_buddy_21">30 дней</string>
    <string name="budget_buddy_22">Сегодня</string>
    <string name="budget_buddy_23">Вчера</string>
    <string name="budget_buddy_24">Расходы</string>
    <string name="budget_buddy_25">Остаток на мес</string>
    <string name="budget_buddy_26">По категориям</string>

    <string name="budget_buddy_loading">Загрузка…</string>
    <string name="budget_buddy_confirm">Подтвердить</string>
    <string name="budget_buddy_add">Добавить</string>
    <string name="budget_buddy_cancel">Отменить</string>
    <string name="title_activity_general">GeneralActivity</string>

    <string name="budget_buddy_category_1">Еда и напитки</string>
    <string name="budget_buddy_category_2">Транспорт</string>
    <string name="budget_buddy_category_3">Коммунальные услуги</string>
    <string name="budget_buddy_category_4">Развлечения и досуг</string>
    <string name="budget_buddy_category_5">Здоровье</string>
    <string name="budget_buddy_category_6">Одежда</string>
    <string name="budget_buddy_category_7">Образование</string>

</resources>